# log4cxx_10_to_11

./: CMakeLists.txt  CppFile.cpp  CppFile.h  README.md  conanfile.txt  log4cxx_10_to_11.cpp  log4cxx_10_to_11_tests.cpp
resources/: log4cxx_10_to_11.properties  main_0_10.cpp
test/: CMakeLists.txt  CppFileTests.cpp
util/: CMakeLists.txt  CppFile.cpp  CppFile.h  DirectoryEntryIterator.cpp
